@@ -2,7 +2,7 @@
 ## Check if --with-regex was given.  ##
 ## --------------------------------- ##
 
-# Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003
+# Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004
 # Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # 02111-1307, USA.
 
-# serial 5
+# serial 6
 
 # AM_WITH_REGEX
 # -------------
@@ -41,14 +41,14 @@ AC_DEFUN([AM_WITH_REGEX],
 [AC_PREREQ(2.50)dnl
 AC_LIBSOURCES([rx.h, rx.c, regex.c, regex.h])dnl
 AC_MSG_CHECKING([which of GNU rx or gawk's regex is wanted])
-AC_ARG_WITH(regex,
+AC_ARG_WITH([regex],
 [  --without-regex         use GNU rx in lieu of gawk's regex for matching],
 	    [test "$withval" = yes && am_with_regex=1],
 	    [am_with_regex=1])
 if test -n "$am_with_regex"; then
-  AC_MSG_RESULT(regex)
-  AC_DEFINE(WITH_REGEX, 1, [Define if using GNU regex])
-  AC_CACHE_CHECK([for GNU regex in libc], am_cv_gnu_regex,
+  AC_MSG_RESULT([regex])
+  AC_DEFINE([WITH_REGEX], 1, [Define if using GNU regex])
+  AC_CACHE_CHECK([for GNU regex in libc], [am_cv_gnu_regex],
     [AC_TRY_LINK([],
 		 [extern int re_max_failures; re_max_failures = 1],
 		 [am_cv_gnu_regex=yes],
@@ -57,10 +57,9 @@ if test -n "$am_with_regex"; then
     AC_LIBOBJ([regex])
   fi
 else
-  AC_MSG_RESULT(rx)
-  AC_CHECK_FUNC(re_rx_search, , [AC_LIBOBJ([rx])])
-fi
-AC_SUBST(LIBOBJS)dnl
+  AC_MSG_RESULT([rx])
+  AC_CHECK_FUNC([re_rx_search], , [AC_LIBOBJ([rx])])
+fi[]dnl
 ])
 
 AU_DEFUN([fp_WITH_REGEX], [AM_WITH_REGEX])
