@@ -400,6 +400,7 @@ remake2.test \
 remake3.test \
 remake4.test \
 remake5.test \
+regex.test \
 req.test \
 reqd.test \
 reqd2.test \
