@@ -1,3 +1,9 @@
+2004-01-31  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/regex.m4: Do not AC_SUBST(LIBOBJS), and quote most arguments.
+	* tests/regex.test: New file.
+	* tests/Makefile.am (TESTS): Add regex.test.
+
 2004-01-28  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* Makefile.am (maintainer-check): Check for unquoted $(DESTDIR) uses.
